// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STEM tool render goldens (default state) > renders + pins a digest for accessLens 1`] = `
{
  "buttons": 8,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "caaf192ade0f0aad",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquacultureLab 1`] = `
{
  "buttons": 182,
  "inputs": 2,
  "lengthBucket": 574,
  "sha": "393a4871d4401774",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquarium 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 162,
  "sha": "fa923a630377922e",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 19,
  "inputs": 4,
  "lengthBucket": 57,
  "sha": "7c2a44d916b7b6a7",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for cellularLab 1`] = `
{
  "buttons": 52,
  "inputs": 3,
  "lengthBucket": 131,
  "sha": "a3383ae5ed78f336",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for climateExplorer 1`] = `
{
  "buttons": 40,
  "inputs": 0,
  "lengthBucket": 171,
  "sha": "19c5ef6021827be4",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for ecosystem 1`] = `
{
  "buttons": 47,
  "inputs": 11,
  "lengthBucket": 210,
  "sha": "49ab34cc4aa2f005",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 191,
  "sha": "7b6c554a15d311b5",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geologyExplorer 1`] = `
{
  "buttons": 49,
  "inputs": 2,
  "lengthBucket": 184,
  "sha": "b122a4d12e7ffa21",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geometryWorld 1`] = `
{
  "buttons": 0,
  "inputs": 0,
  "lengthBucket": 3,
  "sha": "b8a99a790463ce28",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for musicSynth 1`] = `
{
  "buttons": 121,
  "inputs": 15,
  "lengthBucket": 260,
  "sha": "69e050ec5ed887fe",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for opticsLab 1`] = `
{
  "buttons": 34,
  "inputs": 0,
  "lengthBucket": 108,
  "sha": "6609c726cfda9dd5",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for spaceColony 1`] = `
{
  "buttons": 16,
  "inputs": 7,
  "lengthBucket": 101,
  "sha": "80e13d585be362af",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 62,
  "sha": "ee7695e3735821fe",
  "svgs": 1,
}
`;
